--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -13,7 +13,35 @@
 @media only screen and (max-width: 1170px)
   /**/
 @media only screen and (max-width: 992px)
-  /**/
+  .container
+    padding: 0 20px
+  .header__desktop, .header__menu, .submenu__mobile
+    display: none
+  .header__mobile
+    display: block
+  .header__inner
+    text-align: right
+    padding: 20px 0
+  .header__menu
+    li
+      padding: 10px 0
+    .hasChild
+      position: relative
+      span
+        align-items: center
+      img
+        width: 15px
+    .hasChild.active > span
+      img
+          transform: rotate(180deg)
+
+
+    .hasChild
+      &.active > .submenu__mobile
+          margin-left: 10px
+          display: block
+
+
 @media only screen and (max-width: 768px)
   /**/
 @media only screen and (max-width: 660px)
